tests/suite/errors/e41_while_let_enum_pattern_wrong_type.rs
// err: pattern `Opt::Some` used on `i64`

enum Opt {
    Some(i64),
    None,
}

fn main() {
    let n: i64 = 0;
    while let Opt::Some(x) = n {
        println!("{}", x);
    }
}
